[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Modules/Grid/World/GridWorld.gd" type="Script" id=1]
[ext_resource path="res://src/Modules/Grid/Tiles/PawnController.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Modules/Grid/World/Environment.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Modules/Grid/World/GridNavigation.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Modules/Grid/World/TileController.tscn" type="PackedScene" id=6]

[node name="GridWorld" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Environment" parent="." instance=ExtResource( 3 )]

[node name="RatHoleContainer" type="Node2D" parent="."]

[node name="TileController" parent="." instance=ExtResource( 6 )]
self_modulate = Color( 0.584314, 0.427451, 0.784314, 1 )
tile_data = PoolIntArray( 1048570, 0, 0, 1179634, 0, 0, 1245168, 2, 0, 1376255, 1, 0, 1376289, 1, 0, 1441821, 0, 0, 1507364, 2, 0, 1703955, 2, 0, 1835002, 0, 0, 1900541, 2, 0, 1900568, 0, 0, 1900576, 2, 0, 2031608, 2, 0, 1966117, 0, 0, 2097137, 0, 0, 2031621, 2, 0, 2031629, 0, 0, 2097184, 0, 0, 2228211, 2, 0, 2293751, 0, 0, 2293758, 0, 0, 2228244, 2, 0, 2490364, 0, 0, 2424847, 2, 0, 2490387, 2, 0, 2490400, 2, 0, 2555936, 2, 0 )

[node name="PawnController" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 1310715, 1, 0, 1441777, 1, 0, 1703967, 3, 0, 1966062, 1, 0, 1966076, 1, 0, 2228228, 0, 0, 2359331, 2, 0, 2555893, 1, 0 )

[node name="GridNavigation" parent="." instance=ExtResource( 4 )]
